# Scarborough_ROS

./: .gitignore
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: i2c_Tester.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 4.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/i2c_Tester/: .location  .markers  .markers.snap  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/i2c_Tester/.indexes/: history.index  (+1 more)
.metadata/.plugins/org.eclipse.core.resources/.projects/scarborough/: .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  2.tree  3.tree  4.tree  5.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: _1.tis  _2.frq  _2.tis  _3.tis  segments_3  segments_4
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_2
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.ximbuntu_0/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
PID_Controller/: .~lock.i2c_registries.xlsx#  PID_Controller.ino  i2c_dealer.cpp  i2c_dealer.h  i2c_registries.xlsx  power.cpp  power.h
scarborough/: .cproject  .project  .pydevproject  CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
scarborough/launch/: black_pearl.launch
scarborough/launcher/: dead_reckoning.launch  scarborough.launch
scarborough/msg/: Desired_Directions.msg  Kill_Switch.msg  Motor_Speed.msg  Vision_objects.msg  YPR.msg
scarborough/msg_gen/cpp/include/scarborough/: Depth.h  Desired_Directions.h  Hal.h  Kill_Switch.h  Motor_Speed.h  Vision_objects.h  YPR.h
scarborough/msg_gen/lisp/: Depth.lisp  Desired_Directions.lisp  Hal.lisp  Kill_Switch.lisp  Motor_Speed.lisp  Vision_objects.lisp  YPR.lisp  _package.lisp  _package_Depth.lisp  _package_Desired_Directions.lisp  _package_Hal.lisp  _package_Kill_Switch.lisp  _package_Motor_Speed.lisp  _package_Vision_objects.lisp  _package_YPR.lisp  scarborough-msg.asd
scarborough/src/: listener.cpp  talker.cpp
scarborough/src/Arduino_Communications/: I2Cdev.cpp  arduino_comm.cpp  arduino_comm.h  arduino_i2c.cpp  arduino_i2c.h
scarborough/src/Dead_Motors/: Dead_Motors.cpp  Dead_Motors.h  Dead_Motors_Main.cpp  I2Cdev.cpp
scarborough/src/Depth_Sensor/: DepthSensor.cpp  anchor.cpp  anchor.h
scarborough/src/Hal9000/: Hal_Main.cpp  hal.cpp  hal.h  timer.cpp  timer.h
scarborough/src/HandlerNames/: HANDLER_NAMES.h
scarborough/src/Heimdall/: Heimdall.cpp  Heimdall.h  Heimdall_main.cpp  OBJECT_CONSTANTS.h  main.cpp  main2.cpp
scarborough/src/Heimdall/Helper_Functions/: Scarborough_Vision.cpp  Scarborough_Vision.hpp  allbouy.cpp  movement.cpp  movement.h  pathmarker.cpp
scarborough/src/IMU/: I2Cdev.cpp  IMU.cpp  IMU.cpp.save  IMU.h
scarborough/src/IMU/RTLIB/: IMU2.cpp  IMU2.h  IMU_main.cpp
scarborough/src/IMU/accelerometer/: accel_main.cpp  accelerometer.cpp  accelerometer.h
scarborough/src/Motor_Controls/: Helm.cpp  Helm.h  I2Cdev.cpp  I2Cdev.h  PID_config.yaml  motors.cpp  motors.h  motors_scarborough.cpp  motors_scarborough.h
scarborough/src/Motor_Controls/Manual_Control/: Manual_Control.cpp  Manual_Control.h
scarborough/src/scarborough/msg/: _Depth.py  _Desired_Directions.py  _Hal.py  _Kill_Switch.py  _Motor_Speed.py  _Vision_objects.py  _YPR.py  __init__.py
scarborough/src/scarborough_interface/: scarborough_gui.py
(+25 files in other folders)
